@@ -575,6 +575,18 @@ before saving a document."
   :type 'boolean
   :group 'lsp-mode)
 
+(defcustom lsp-format-buffer-on-save nil
+  "If non-nil format buffer on save.
+To only format specific major-mode buffers see `lsp-format-buffer-on-save-list'."
+  :type 'boolean
+  :group 'lsp-mode)
+
+(defcustom lsp-format-buffer-on-save-list '()
+  "If the list is empty format all buffer on save. Else only format buffers
+if their major-mode is in the list."
+  :type '(repeat symbol)
+  :group 'lsp-mode)
+
 (defcustom lsp-after-apply-edits-hook nil
   "Hooks to run when text edit is applied.
 It contains the operation source."
@@ -5201,6 +5213,13 @@ if it's closing the last buffer in the workspace."
                'before-save)
             (error)))))))
 
+(defun lsp--format-buffer-before-save ()
+  (when lsp-format-buffer-on-save
+    (if (not lsp-format-buffer-on-save-list)
+        (lsp-format-buffer)
+      (when (member major-mode lsp-format-buffer-on-save-list)
+        (lsp-format-buffer)))))
+
 (defun lsp--on-auto-save ()
   "Handler for auto-save."
   (when (lsp--send-will-save-p)
@@ -9397,6 +9416,7 @@ Errors if there are none."
   (lsp--text-document-did-close t)
   (lsp-managed-mode -1)
   (lsp-mode -1)
+  (remove-hook 'before-save-hook #'lsp--format-buffer-before-save t)
   (setq lsp--buffer-workspaces nil)
   (lsp--info "Disconnected"))
 
@@ -9445,6 +9465,7 @@ argument ask the user to select which language server to start."
                         (lsp--try-project-root-workspaces (equal arg '(4))
                                                           (and arg (not (equal arg 1))))))
           (lsp-mode 1)
+          (add-hook 'before-save-hook #'lsp--format-buffer-before-save nil t)
           (when lsp-auto-configure (lsp--auto-configure))
           (setq lsp-buffer-uri (lsp--buffer-uri))
           (lsp--info "Connected to %s."
